# ya-practice

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  main.cpp  model.h  request_handler.cpp  request_handler.h  router.cpp
sprint1/problems/map_json/solution/src/: http_server.h  model.h  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp  utils.h
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/game_state/solution/data/: config.json
sprint2/problems/hello_log/: CMakeLists.txt  main.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: main.cpp
sprint2/problems/logger/solution/: CMakeLists.txt  main_main.cpp  my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: main.cpp
sprint2/problems/server_logging/solution/src/net/: api_router.h  file_server.cpp  file_server.h  http_server.h  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/solution/src/utils/: logger.cpp  logger.h  logger_request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h  router.cpp  router.h
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/collisions/: CMakeLists.txt
sprint3/problems/find_return/solution/src/collisions/include/collisions/: collision_detector.h
sprint3/problems/find_return/solution/src/collisions/src/: collision_detector.cpp
sprint3/problems/find_return/solution/src/game/: game.cpp  game.h  game_session.cpp  game_session.h
sprint3/problems/find_return/solution/src/model/include/model/: dog.h  map.h
sprint3/problems/find_return/solution/src/model/src/: map.cpp
sprint3/problems/find_return/solution/src/net/: authorization.h  file_server.cpp  http_server.h  request_handler.cpp  response_m.h  uri_element.h
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp  game_loot_tests.cpp
sprint3/problems/flamegraph/solution/: CMakeLists.txt  Dockerfile  gmon.out  shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather/solution/: Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/game/: game.cpp  game.h  game_session.cpp  game_session.h  loot_generator.cpp  map.cpp  map.h
sprint3/problems/gen_objects/solution/src/net/: file_server.h  request_handler.cpp  request_handler.h  token_machine.cpp
sprint3/problems/gen_objects/solution/src/utils/: json_loader.cpp  magic_defs.h  serializer.h
sprint3/problems/gen_objects/solution/tests/: game_loot_tests.cpp  loot_generator_tests.cpp
sprint3/problems/instrumentation/solution/: event2dot
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/scores/solution/src/model/: CMakeLists.txt
sprint3/problems/scores/solution/src/model/include/model/: dog.h  map.h
sprint3/problems/scores/solution/src/model/src/: loot_generator.cpp  map.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/tv/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.h  main.cpp
sprint4/problems/bookypedia-2/solution/src/lib/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/lib/src/bookypedia/app/: unit_of_work.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/lib/src/bookypedia/domain/: author.h  book.h
sprint4/problems/bookypedia-2/solution/src/lib/src/bookypedia/menu/: menu.cpp  menu.h
sprint4/problems/bookypedia-2/solution/src/lib/src/bookypedia/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/lib/src/bookypedia/ui/: view.cpp  view.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/db_of_books/solution/src/: book.h  book_manager.h  book_requests.h  cmd_processor.h  console_processor.h  dbproxy.cpp  dbproxy.h  jsonconverter.h
sprint4/problems/db_of_books/solution/tests/: dbproxy_tests.cpp  jsonconvertion_tests.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: main.cpp
sprint4/problems/leave_game/solution/src/collisions/include/collisions/: collision_detector.h  geom.h
sprint4/problems/leave_game/solution/src/game/: game.cpp  game.h  game_session.cpp  game_session.h  highscorer.h  player.h  players.h
sprint4/problems/leave_game/solution/src/model/: conanfile.txt
sprint4/problems/leave_game/solution/src/model/include/model/: dog.h  tagged.h
sprint4/problems/leave_game/solution/src/net/: request_handler.cpp  request_handler.h  token_machine.cpp  token_machine.h  uri_element.h
sprint4/problems/leave_game/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/leave_game/solution/src/utils/: game_saver.cpp  game_saver.h  json_loader.cpp  logger.cpp  magic_defs.h  ticker.h  timer.h
sprint4/problems/leave_game/solution/tests/: game_loot_tests.cpp  loot_generator_tests.cpp  state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt
(+152 files in other folders)
